k8s/wmapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wmapi
  name: wmapi
spec:
  ports:
  - name: 80-http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: wmapi
  type: ClusterIP
status:
  loadBalancer: {}
